--- a/Shop/AuthorizationPage.xaml
+++ b/Shop/AuthorizationPage.xaml
@@ -9,6 +9,29 @@
       Title="AuthorizationPage">
 
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <TextBlock x:Name="auto_text" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="Авторизация" FontSize="32" Foreground="#AD7261"/>
+        <TextBlock x:Name="login_text" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="Логин" FontSize="24" Foreground="#AD7261"/>
+        <TextBlock x:Name="password_text" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="Пароль" FontSize="24" Foreground="#AD7261"/>
+        <TextBox x:Name="login_tbx" Grid.Column="1" Grid.Row="3" Margin="10, 0, 10, 0" Grid.ColumnSpan="2" FontSize="24" Background="#FAB7A4" Foreground="#AD7261"/>
+        <PasswordBox x:Name="password_tbx" Grid.Column="1" Grid.Row="5" Margin="10, 0, 10, 0" Grid.ColumnSpan="2" FontSize="24" Background="#FAB7A4" Foreground="#AD7261"/>
+        <Button x:Name="auto_btn" Grid.Column="1" Grid.Row="7" Margin="10, 0, 10, 0" FontSize="24"  Background="#FAB7A4" Foreground="#AD7261" Content="Войти" Click="auto_btn_Click"/>
+        <Button x:Name="reg_btn" Grid.Column="2" Grid.Row="7" Margin="10, 0, 10, 0" FontSize="24" Background="#FAB7A4" Foreground="#AD7261" Content="Регистрация"/>
     </Grid>
 </Page>
