--- a/Shop/EditPage.xaml
+++ b/Shop/EditPage.xaml
@@ -25,7 +25,7 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Добавление нового продукта" Foreground="#AD7261" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TextBlock Text="Изменение продукта" Foreground="#AD7261" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <TextBlock Text="Наименование" Foreground="#AD7261" Grid.Row="1" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <TextBlock Text="Описание" Foreground="#AD7261" Grid.Row="2" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <TextBlock Text="Ед. измерения" Foreground="#AD7261" Grid.Row="3" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"/>
