--- a/Shop/IntakesPage.xaml
+++ b/Shop/IntakesPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Shop.OrderPage"
+﻿<Page x:Class="Shop.IntakesPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Shop"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="OrderPage">
+      Title="IntakesPage">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -31,20 +31,18 @@
         </Grid.RowDefinitions>
         
 
-        <DataGrid x:Name="dgOrders" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="6" Grid.RowSpan="5" ItemsSource="{Binding Orders}" Background="#FFFAB7A4" Foreground="Black" BorderBrush="{x:Null}" 
-                  AutoGenerateColumns="False" IsReadOnly="True">
+        <DataGrid x:Name="DGIntakes" Grid.Row="2" Grid.Column="0" Grid.RowSpan="5" Grid.ColumnSpan="6" ItemsSource="{Binding Intakes}"  Background="#FFFAB7A4" Foreground="Black" BorderBrush="{x:Null}" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Идентификатор" Binding="{Binding Id}"/>
-                <DataGridTextColumn Header="Дата" Binding="{Binding Date, StringFormat=d, ConverterCulture=ru-RU}"/>
-                <DataGridTextColumn Header="Кол-во товаров" Binding="{Binding ProductOrder.Count}"/>
-                <DataGridTextColumn Header="Этап" Binding="{Binding StatusOrder.Name}"/>
-                <DataGridTextColumn Header="Заказчик" Binding="{Binding Client.FIO}"/>
-                <DataGridTextColumn Header="Исполнитель" Binding="{Binding Worker.FIO}"/>
+                <DataGridTextColumn Header="Номер" Binding="{Binding Id}"/>
+                <DataGridTextColumn Header="Поставщик" Binding="{Binding Supplier.Name}"/>
+                <DataGridTextColumn Header="Сумма" Binding="{Binding TotalAmount}"/>
+                <DataGridTextColumn Header="Дата" Binding="{Binding Data, StringFormat=d, ConverterCulture=ru-RU}"/>
+                <DataGridTextColumn Header="Статус" Binding="{Binding StatusIntake.Name}"/>
             </DataGrid.Columns>
         </DataGrid>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2">
-            <Button x:Name="btn_AddOrd" Height="30" Width="70" Content="Добавить" Background="#FFAD7261"  Foreground="White" FontFamily="Arial" Click="btn_AddOrd_Click"/>
-            <Button x:Name="btn_Back" Content="Назад"  Height="30" Width="70"  Background="#FFAD7261" Foreground="White" FontFamily="Arial" Click="btn_Back_Click"/>
+            <Button x:Name="btn_AddInt" Width="70" Content="Добавить" Grid.Column="1" Grid.Row="0" VerticalAlignment="Top"  Background="#FFAD7261" BorderBrush="{x:Null}" Foreground="White" FontFamily="Arial" Click="btn_AddInt_Click"/>
+            <Button x:Name="btn_Back" Width="70" Content="Назад"  Grid.Column="1" Grid.Row="0" VerticalAlignment="Bottom"  Background="#FFAD7261" BorderBrush="{x:Null}" Foreground="White" FontFamily="Arial" Click="btn_Back_Click"/>
         </StackPanel>
     </Grid>
 </Page>
